2008-05-04	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* build_mingw32:
	build with -fno-strict-aliasing as compiling with MinGW-GCC < 4.3.0
	can lead to miscompilations without this flag

	* ima/src/main_window.cpp:
	added exit()-call in main-window-destructor when building for win32 -
	hack which fixes bug

	* lib/src/isd_connection.cpp:
	increased timeout when reading from socket

	* ima/src/client.cpp:
	changed color of active titlebar

	* ica/src/isd_server.cpp:
	* ima/italc.qrc:
	* ima/src/tool_button.h:
	* ima/src/main_window.h:
	* ima/src/main.cpp:
	* ima/src/classroom_manager.h:
	* ima/src/tool_button.cpp:
	* ima/src/main_window.cpp:
	* ima/src/classroom_manager.cpp:
	* ima/resources/tray-menu-bg.png:
	* lib/include/isd_connection.h:
	* lib/include/isd_base.h:
	* lib/src/isd_connection.cpp:
	added support for controlling master-application via system-tray-icon

	* README.LZO:
	* lib/include/lzodefs.h:
	* lib/include/lzoconf.h:
	* lib/include/minilzo.h:
	* lib/src/minilzo.c:
	updated miniLZO-library to version 2.03

2008-05-03	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ica/win32/src/vncEncodeCoRRE.cpp:
	included patch from TightVNC-bug-tracker

2008-04-27	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ima/src/tool_button.h:
	* ima/src/tool_button.cpp:
	fixed tooltip flicker issue

	* ima/dialogs/config.ui:
	* ima/src/config_widget.h:
	* ima/src/config_widget.cpp:
	* ima/src/classroom_manager.cpp:
	* ima/src/tool_button.h:
	* ima/src/tool_button.cpp:
	added option for making toolbar buttons only display icon

	* ima/src/client.h:
	* ima/src/main_window.cpp:
	* ima/src/client.cpp:
	better shutdown on exit - hopefully fixes threading-problems

	* ima/src/main_window.cpp:
	fixed endless loop when initializing keys

2008-04-23	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ica/src/ivs.cpp:
	* ica/src/isd_server.cpp:
	* lib/include/isd_base.h:
	* lib/src/isd_base.cpp:
	* ica/win32/win32vnc.cpp: