@@ -1,3 +1,11 @@
+2008-04-21	Andriano Rino <rino-andr/at/users/dot/sourceforge/dot/net>
+
+	* ima/resources/it.qm:
+	* ima/resources/it.ts:
+	* setup/resources/it.qm:
+	* setup/resources/it.ts:
+	Updated Italian localization
+
 2008-05-04	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
 
 	* build_mingw32:
